@startuml
entity Benutzer

entity Messung
{
    * **ID <<PK>>**
    * Datum
    * Koerpergewicht
    * KoerperfettAnteil
    * **BenutzerID <<FK>>**
}

entity Ziel
{
    * **ID <<PK>>**
    * Datum
    * Koerpergewicht
    * KoerperfettAnteil
    * **BenutzerID <<FK>>**
}

entity Hautfaltendicke
{
    * **ID <<PK>>**
    * Datum
    * Brustfalte
    * Bauchfalte
    * Beinfalte
    * Hueftfalte
    * Achselfalte
    * Trizepsfalte
    * Rueckenfalte
    * KoerperfettAnteil
    * **BenutzerID <<FK>>**
}

entity Umfaenge
{
    * **ID <<PK>>**
    * Datum
    * HalsUmfang
    * SchulterUmfang
    * BrustRueckenUmfang
    * LinkerOberarmUmfang
    * RechterOberarmUmfang
    * LinkerUnterarmUmfang
    * RechterUnterarmUmfang
    * BauchUmfang
    * HueftUmfang
    * LinkerOberschenkelUmfang
    * RechterOberschenkelUmfang
    * LinkerUnterschenkelUmfang
    * RechterUnterschenkelUmfang
    * **BenutzerID <<FK>>**
}

Benutzer ||--o{ Messung
Benutzer ||--o{ Ziel
Benutzer ||--o{ Hautfaltendicke
Benutzer ||--o{ Umfaenge
@enduml
